Remove stale includes from WebHistoryServiceFactory

Neither SigninManager nor ProfileOAuth2TokenService are in use anymore,
we can safely remove them.

Bug: 885174
Change-Id: I9ea858295b2bb868b7a8bdbb73ec34927041fbac
Reviewed-on: https://chromium-review.googlesource.com/c/1288438
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601086}